# ClawCrate

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  clawcrate-v3.1.1.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml  require-issue-closing-reference.yml  wsl2-ci.yml
crates/clawcrate-audit/: Cargo.toml
crates/clawcrate-audit/benches/: hash_chain.rs
crates/clawcrate-audit/src/: lib.rs
crates/clawcrate-capture/: Cargo.toml
crates/clawcrate-capture/src/: lib.rs
crates/clawcrate-cli/: Cargo.toml
crates/clawcrate-cli/src/: api.rs  approval.rs  audit_export.rs  bridge.rs  cli.rs  doctor.rs  main.rs  mcp.rs  mcp_install.rs  output.rs  replica.rs  run.rs  support.rs  tests.rs  verify.rs
crates/clawcrate-cli/tests/: golden_cli_outputs.rs  install_replica_integration.rs  mcp_demo_wrap_integration.rs  mcp_wrap_integration.rs
crates/clawcrate-cli/tests/golden/: doctor_json.golden  doctor_text.golden  plan_json.golden  plan_text.golden  run_json.golden  run_text.golden
crates/clawcrate-profiles/: Cargo.toml
crates/clawcrate-profiles/src/: lib.rs
crates/clawcrate-sandbox/: Cargo.toml
crates/clawcrate-sandbox/fixtures/security/home/.aws/: credentials
crates/clawcrate-sandbox/fixtures/security/home/.ssh/: id_rsa
crates/clawcrate-sandbox/fixtures/security/workspace/: .env  public.txt
crates/clawcrate-sandbox/src/: darwin.rs  egress_proxy.rs  env_scrub.rs  lib.rs  linux.rs  linux_probe.rs  macos_probe.rs  path_normalize.rs  rlimits.rs
crates/clawcrate-sandbox/tests/: security_fixtures.rs
crates/clawcrate-types/: Cargo.toml
crates/clawcrate-types/src/: lib.rs
crates/clawcrate-types/tests/: serde_roundtrip.rs
docs/: GITHUB_BACKLOG.md  WORKFLOW.md  architecture.md  backlog.yaml  codex-context-2026-05-01.md  community-profiles.md  compliance-statement-eu-ai-act.md  egress-proxy-threat-model.md  encode-club-submission.md  epic-m2-completion.md  epic-m3-completion.md  epic-m4-completion.md  epic-m5-completion.md  epic-status-remediation-completion.md  eu-ai-act-compliance.md  ietf-audit-trail-alignment.md  integration-guide.md  kernel-requirements.md  planning-2026-05-15.md  profiles-reference.md  release-checklist.md  roadmap-2026-07-05.md  strategic-audit-2026-06-19.md  strategic-audit-2026-07-05.md  technical-note-gemini-deferred-pr114-pr146.md  technical-note-gemini-deferred-pr82-pr100.md  technical-note-gemini-disposition-pr163-pr190.md  technical-note-gemini-triage-pr114-pr146.md  technical-note-gemini-triage-pr57-pr74.md  technical-note-gemini-triage-pr82-pr100.md  technical-note-status-remediation-plan-2026-04-26.md  validation-operator-runbook-2026-05-02.md  wsl2-compatibility.md
docs/integrations/: claude-desktop-mcp-wrap.md  continue-dev-mcp-wrap.md  cursor-mcp-wrap.md
examples/agent-demo/: README.md  agent.py  demo.sh
examples/mcp-filesystem-demo/: .gitignore  README.md  demo.sh  launcher.sh
examples/mcp-filesystem-demo/secret-vault/: api-key.txt
examples/mcp-filesystem-demo/workspace/: .clawcrateignore  .env  .npmrc  README.md
examples/mcp-filesystem-demo/workspace/docs/: notes.md
examples/mcp-filesystem-demo/workspace/src/: index.js
profiles/: build.yaml  install.yaml  open.yaml  safe.yaml
profiles/community/: agent-inference-allowlist.yaml  catalog.yaml  mcp-readonly.yaml  mcp-server.yaml  npm-install-allowlist.yaml  pip-install-pypi-only.yaml
scripts/: create_github_backlog.sh  cut_release.sh  install.sh  release.sh  validate_engineering.sh  validate_release_smoke.sh
