[package]
name = "clawcrate-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
clawcrate-types = { path = "../clawcrate-types" }
serde = "1"
serde_json = "1"
thiserror = "2"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
