[package]
name = "clawcrate-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clawcrate-types = { path = "../clawcrate-types" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = "1"
serde_json = "1"
thiserror = "2"
