[package]
name = "clawcrate-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clawcrate-types = { path = "../clawcrate-types" }
ed25519-dalek = { version = "2", features = ["pem", "pkcs8"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = "1"
serde_json = "1"
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "hash_chain"
harness = false
