[package]
name = "clawcrate-capture"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
clawcrate-types = { path = "../clawcrate-types" }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "2"
walkdir = "2"
