[package]
name = "clawcrate-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "clawcrate"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clawcrate-audit = { path = "../clawcrate-audit" }
clawcrate-capture = { path = "../clawcrate-capture" }
clawcrate-profiles = { path = "../clawcrate-profiles" }
clawcrate-sandbox = { path = "../clawcrate-sandbox" }
clawcrate-types = { path = "../clawcrate-types" }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal"] }
signal-hook = "0.3"
