[package]
name = "clawcrate-profiles"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
clawcrate-types = { path = "../clawcrate-types" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
