[package]
name = "clawcrate-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
clawcrate-profiles = { path = "../clawcrate-profiles" }
clawcrate-types = { path = "../clawcrate-types" }
