[package]
name = "clawcrate-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
clawcrate-profiles = { path = "../clawcrate-profiles" }
clawcrate-types = { path = "../clawcrate-types" }
nix = { version = "0.29", features = ["resource"] }
thiserror = "2"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
